# BookiePro

./: .babelrc  .editorconfig  .eslintrc  .eslintrc.js  .gitignore  .gitignore~  .gitlab-ci.yml  .gitmodules  .huskyrc.json  .prettierrc  .sonarcloud.properties  .stylelintignore  .stylelintrc.json  CHANGELOG.md  LICENSE  LICENSE.md  README.md  StylelintRules.md  audit-resolve.json  config.js  electron-builder.yaml  electron.js  index.html  package-lock.json  package.json  postcss.config.js  server.js  webpack.config.js
.scannerwork/: report-task.txt
app/: electron.js
app/actions/: AppSettingsActions.js  RSettingsActions.js  RTransactionConfirmActions.js  RWalletActions.js  RegisterActions.js  SettingsActions.js  WalletUnlockActions.js
app/chain/: asset_constants.js
app/common/: account_utils.js  localStorageImpl.js  permission_utils.js
app/components/: LoadingIndicator.jsx
app/config/: main.js
app/constants/: LocationConstants.js  Register.js
app/containers/: DevTools.js
app/reducers/: ClaimBtsReducer.js
app/repositories/: BalanceRepository.js
app/rpc_api/: WalletApi.js
app/services/: AccountService.js
bloom_filter/: bloom.py  bloom_filter_wallet.js
cli/: app.js  package.json  webpack.config.js
config/: Config.js  endpoints.js  env.js  jest-test-setup.js  paths.js  webpack-build-dev-net.js  webpack-dev.js  webpack-prod.js  webpack.config.dev.js  webpack.config.electron.js  webpack.config.js  webpack.config.prod.js
deploy/: buildElectron.sh  deploy.sh  updateAndRestart.sh
dl/: package-lock.json  package.json
dl/src/: alt-instance.js  (+4 more)
electron/: .gitignore  package-lock.json  package.json
hybrid_bundle/: sixpro_build_install_linux.sh  sixpro_build_install_windows.bat
hybrid_bundle/sixpro_app/: CMakeLists.txt  main.cpp  mainlayout.cpp  mainlayout.h  sixpro.cpp  sixpro.h  sixpro.ui  sixpro_app.pro  webserverthread.cpp  webserverthread.h  window.cpp  window.h
public/: icon.icns  index.html
scripts/: build-electron.js  build.js  sonar.js  start.js
src/: App.jsx  English_Spanish_Translation.xlsx  KeyGen.jsx  Main-dev.js  Main.js  dl_cli_index.js  electron-starter.js  electron-wait-react.js  idb-helper.js  idb-instance.js  idb-root.js  index.js
web/: .gitignore  package-lock.json  package.json  server.js
(+1616 files in other folders)
